--- a/index.html
+++ b/index.html
@@ -91,27 +91,14 @@
                     <div>
                         
                     </div>
-                    <!-- <div class="card shadow-xl p-4">
-                    </div> -->
                 </div>
             </div>
             <!-- categories-right -->
             <div class="categories-right w-full md:w-50 shrink-0 mx-auto md:mx-0 bg-white p-4">
                 <h2 class="text-lg font-semibold mb-3 text-center md:text-left">Your Cart</h2>
                 <div class="space-y-3">
-                    <div class="flex justify-between items-center px-3 py-1 bg-[rgba(240,253,244,1)] rounded-lg">
-                        <div>
-                            <p class="text-sm font-medium mb-2">Mango Tree</p>
-                            <p class="text-sm font-light text-[rgba(31,41,55,1)]">৳500 x 1</p>
-                        </div>
-                    <i class="fa-solid fa-xmark text-gray-400 text-sm"></i>
-                    </div>
-                    <div class="flex justify-between items-center px-3 py-1 bg-[rgba(240,253,244,1)] rounded-lg">
-                        <div>
-                            <p class="text-sm font-medium mb-2">Mango Tree</p>
-                            <p class="text-sm font-light text-[rgba(31,41,55,1)]">৳500 x 1</p>
-                        </div>
-                        <i class="fa-solid fa-xmark text-gray-400 text-sm"></i>
+                    <div id="cart-list" class="mt-3 rounded-xl">
+                            
                     </div>
                 </div>
                 <div>
@@ -119,7 +106,7 @@
                 </div>
                 <div class="flex justify-between items-center text-[#1F2937]">
                     <p class="text-sm">Total:</p>
-                    <p class="text-sm">৳1000</p>
+                    <p id="cart-total" class="text-sm"></p>
                 </div>
             </div>
         </div>
@@ -128,7 +115,7 @@
     <section class="py-10 md:py-10 bg-[#F0FDF4]">
         <div class="w-9/12 md:w-8/12 mx-auto">
             <div class="text-center">
-                <h1 class="text-2xl md:text-3xl font-semibold mb-10">About the Campaign</h1> <!--mb-10-->
+                <h1 class="text-2xl md:text-3xl font-semibold mb-10">About the Campaign</h1>
             </div>
             <div class="flex justify-center flex-col md:flex-row items-center gap-8">
                 <img src="./assets/about.png">
@@ -150,7 +137,7 @@
             <div class="text-center mb-10">
                 <h1 class="text-2xl md:text-3xl font-semibold mb-10">Our Impact</h1>
             </div>
-            <div class="grid grid-cols-1 md:grid-cols-3 gap-6"> <!--flex justify-around items-center flex-col md:flex-row gap-5-->
+            <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
                 <div class="text-center bg-white px-3 md:px-8 py-4 md:py-6 rounded-xl shadow-sm h-full hover:bg-[#c5edd5]">
                     <h2 class="text-2xl font-semibold text-[rgba(21,128,61,1)] mb-2">500K+</h2>
                     <p class="text-sm text-[#09090B90]">Trees Planted</p>
@@ -169,7 +156,7 @@
 
     <!-- donate -->
     <section class="bg-[rgba(22,101,52,1)]">
-        <div class="w-11/12 mx-auto py-10 md:py-20"> <!--<div class="w-11/12 mx-auto py-20">-->
+        <div class="w-11/12 mx-auto py-10 md:py-20">
             <div class="text-center">
                 <h1 class="text-white text-2xl md:text-3xl font-semibold mb-10">Plant a Tree Today</h1>
             </div>
@@ -205,7 +192,6 @@
         </div>
         <div class="modal-action">
         <form method="dialog">
-            <!-- if there is a button in form, it will close the modal -->
             <button class="btn">Close</button>
         </form>
         </div>
